--- a/dist.ini
+++ b/dist.ini
@@ -5,19 +5,30 @@ copyright_year   = 2018
 license          = Perl_5
 name             = WebService-S3-Tiny
 
-[AutoPrereqs]
-[GatherDir]
-    exclude_filename = README.pod
-    exclude_filename = dist.ini
-    exclude_match    = ~$
-[GitHub::Meta]
-[License]
-[Manifest]
-[MetaJSON]
-[MetaYAML]
-[MetaProvides::Package]
+[@Starter::Git]
+-remove    = Pod2Readme
+-remove    = Git::Push
+-remove    = UploadToCPAN
+installer  = ModuleBuildTiny
+regenerate = Build.PL
+regenerate = META.json
+regenerate = LICENSE
+regenerate = README.md
+revision   = 3
+managed_versions = 1
+Git::GatherDir.exclude_filename[0] = dist.ini
+Git::GatherDir.exclude_filename[1] = cpanfile
+Release_Commit.commit_msg = Release v%V%t
+Git::Tag.tag_message =
+
+[ReadmeAnyFromPod / MarkdownInBuild]
+filename = README.md
+
 [MinimumPerl]
-[ModuleBuildTiny]
-[PrereqsClean]
-[Readme]
-[VersionFromModule]
+[Prereqs::FromCPANfile]
+
+[Repository]
+[Bugtracker]
+web = https://github.com/cv-library/WebService-S3-Tiny/issues
+
+[Git::Contributors]
